--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.mail.host=smtp.example.com
+spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=your_email@example.com
-spring.mail.password=your_email_password
+spring.mail.username=dikandumichael@gmail.com
+spring.mail.password=wyls cvmz tixf gckc
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
